--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,7 @@
       <dependency>
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
-        <version>1.1.2</version>
+        <version>[1.1.2]</version>
       </dependency>
       <dependency>
         <groupId>ch.qos.logback</groupId>
@@ -573,7 +573,18 @@
 							<version>1.0.5</version>
 						</dependency>
 					</dependencies>
-					<executions>
+          <executions>
+          <execution>
+            <id>enforce</id>
+            <configuration>
+              <rules>
+                <dependencyConvergence/>
+              </rules>
+            </configuration>
+            <goals>
+              <goal>enforce</goal>
+            </goals>
+          </execution>
 						<execution>
 							<id>enforce-no-package-cycles</id>
 							<goals>
