--- a/jmxtrans-core/pom.xml
+++ b/jmxtrans-core/pom.xml
@@ -69,6 +69,16 @@
 			<artifactId>jmxtrans-utils</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.jmxtrans</groupId>
+			<artifactId>jmxtrans-utils-log4j</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.jmxtrans</groupId>
+					<artifactId>jmxtrans-utils</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz</artifactId>
 		</dependency>
@@ -80,6 +90,11 @@
 			<groupId>com.google.code.findbugs</groupId>
 			<artifactId>annotations</artifactId>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
