--- a/jmxtrans-utils-log4j/pom.xml
+++ b/jmxtrans-utils-log4j/pom.xml
@@ -3,20 +3,20 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.jmxtrans</groupId>
-		<artifactId>jmxtrans-output</artifactId>
+		<artifactId>jmxtrans-parent</artifactId>
 		<version>251-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>jmxtrans-output-log4j</artifactId>
+	<artifactId>jmxtrans-utils-log4j</artifactId>
 
-	<name>JmxTrans - log4j output writers</name>
+	<name>JmxTrans - log4j output writers utility project</name>
 
-	<description>This module contains output writers that have direct dependencies on logging frameworks.</description>
+	<description>This module contains the logging frameworks loader.</description>
 
 	<properties>
-		<verify.mutationThreshold>0</verify.mutationThreshold>
-		<verify.totalBranchRate>0</verify.totalBranchRate>
-		<verify.totalLineRate>0</verify.totalLineRate>
+		<verify.mutationThreshold>43</verify.mutationThreshold>
+		<verify.totalBranchRate>49</verify.totalBranchRate>
+		<verify.totalLineRate>70</verify.totalLineRate>
 	</properties>
 
 	<dependencies>
@@ -38,10 +38,6 @@
 		</dependency>
 		<dependency>
 			<groupId>org.jmxtrans</groupId>
-			<artifactId>jmxtrans-core</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.jmxtrans</groupId>
 			<artifactId>jmxtrans-utils</artifactId>
 		</dependency>
 		<dependency>
@@ -49,22 +45,14 @@
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
-			<scope>provided</scope>
-			<version>1.1.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<scope>provided</scope>
-			<version>1.7.12</version>
-		</dependency>
-		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
-
 </project>
