--- a/pom.xml
+++ b/pom.xml
@@ -61,9 +61,11 @@
 	<modules>
 		<module>jmxtrans</module>
 		<module>jmxtrans-utils</module>
+		<module>jmxtrans-utils-log4j</module>
 		<module>jmxtrans-output</module>
 		<module>jmxtrans-examples</module>
 		<module>jmxtrans-core</module>
+		<module>jmxtrans-logging</module>
 	</modules>
 
 	<scm>
@@ -98,11 +100,14 @@
 		<jsw.dir>${project.build.directory}/generated-resources/appassembler/jsw/${package.daemon.name}</jsw.dir>
 		<main.class>com.googlecode.jmxtrans.JmxTransformer</main.class>
 		<maven.build.timestamp.format>yyMMdd_HHmm</maven.build.timestamp.format>
+		<outputwriters.log4j.jarpath>/ext/slf4j-log4j12-1.7.12.jar.local</outputwriters.log4j.jarpath>
+		<outputwriters.logback.jarpath>/ext/logback-classic-1.1.2.jar.local</outputwriters.logback.jarpath>
 		<package.daemon.name>${project.artifactId}</package.daemon.name>
 		<package.group>${project.artifactId}</package.group>
 		<package.install.dir>/usr/share/${project.artifactId}</package.install.dir>
 		<package.user>${project.artifactId}</package.user>
 		<packageBuildTimeStamp>${maven.build.timestamp}</packageBuildTimeStamp>
+		<pitest.verbose>false</pitest.verbose>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<verify.mutationThreshold>100</verify.mutationThreshold>
 		<verify.totalBranchRate>100</verify.totalBranchRate>
@@ -111,17 +116,6 @@
 
 	<dependencyManagement>
 		<dependencies>
-			<dependency>
-				<groupId>ch.qos.logback</groupId>
-				<artifactId>logback-classic</artifactId>
-				<version>1.1.2</version>
-				<exclusions>
-					<exclusion>
-						<groupId>org.slf4j</groupId>
-						<artifactId>slf4j-api</artifactId>
-					</exclusion>
-				</exclusions>
-			</dependency>
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-core</artifactId>
@@ -188,6 +182,11 @@
 				<version>2.6</version>
 			</dependency>
 			<dependency>
+				<groupId>commons-logging</groupId>
+				<artifactId>commons-logging</artifactId>
+				<version>1.1.3</version>
+			</dependency>
+			<dependency>
 				<groupId>commons-pool</groupId>
 				<artifactId>commons-pool</artifactId>
 				<version>1.6</version>
@@ -216,6 +215,12 @@
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-jexl</artifactId>
 				<version>2.1.1</version>
+				<exclusions>
+					<exclusion>
+						<groupId>commons-logging</groupId>
+						<artifactId>commons-logging</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.velocity</groupId>
@@ -227,6 +232,21 @@
 				<artifactId>animal-sniffer-annotations</artifactId>
 				<version>1.14</version>
 				<optional>true</optional>
+			</dependency>
+			<dependency>
+				<groupId>org.jboss.logging</groupId>
+				<artifactId>jboss-logging</artifactId>
+				<version>3.1.4.GA</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jboss.marshalling</groupId>
+				<artifactId>jboss-marshalling</artifactId>
+				<version>1.4.8.Final</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jboss.xnio</groupId>
+				<artifactId>xnio-api</artifactId>
+				<version>3.2.0.Final</version>
 			</dependency>
 			<dependency>
 				<groupId>org.jmxtrans</groupId>
@@ -241,6 +261,11 @@
 			<dependency>
 				<groupId>org.jmxtrans</groupId>
 				<artifactId>jmxtrans-examples</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jmxtrans</groupId>
+				<artifactId>jmxtrans-logging</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
@@ -275,12 +300,22 @@
 			</dependency>
 			<dependency>
 				<groupId>org.jmxtrans</groupId>
+				<artifactId>jmxtrans-output-slf4j</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jmxtrans</groupId>
 				<artifactId>jmxtrans-output-velocity</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.jmxtrans</groupId>
 				<artifactId>jmxtrans-utils</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jmxtrans</groupId>
+				<artifactId>jmxtrans-utils-log4j</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
@@ -296,16 +331,6 @@
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
-				<version>1.7.12</version>
-			</dependency>
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-log4j12</artifactId>
-				<version>1.7.12</version>
-			</dependency>
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-simple</artifactId>
 				<version>1.7.12</version>
 			</dependency>
 			<dependency>
@@ -417,11 +442,16 @@
 				<version>1.6.2</version>
 				<scope>test</scope>
 			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-simple</artifactId>
+				<version>1.7.12</version>
+				<scope>test</scope>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
 	<build>
-
 		<pluginManagement>
 			<plugins>
 				<plugin>
@@ -588,6 +618,7 @@
 							<phase>test-compile</phase>
 							<configuration>
 								<rules>
+									<dependencyConvergence/>
 									<NoPackageCyclesRule implementation="de.andrena.tools.nopackagecycles.NoPackageCyclesRule"></NoPackageCyclesRule>
 								</rules>
 							</configuration>
@@ -675,6 +706,15 @@
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.18.1</version>
 					<configuration>
+						<forkCount>1</forkCount>
+						<reuseForks>false</reuseForks>
+						<systemPropertyVariables>
+							<jmxtrans.log.dir>${project.build.directory}</jmxtrans.log.dir>
+							<myhost>w2</myhost>
+							<myport>1099</myport>
+							<outputwriters.log4j.jarpath>${outputwriters.log4j.jarpath}</outputwriters.log4j.jarpath>
+							<outputwriters.logback.jarpath>${outputwriters.logback.jarpath}</outputwriters.logback.jarpath>
+						</systemPropertyVariables>
 						<includes>
 							<include>**/Test*.java</include>
 							<include>**/*Test.java</include>
@@ -725,10 +765,18 @@
 					</configuration>
 					<executions>
 						<execution>
+							<id>clean</id>
 							<goals>
 								<goal>clean</goal>
+							</goals>
+							<phase>clean</phase>
+						</execution>
+						<execution>
+							<id>package</id>
+							<goals>
 								<goal>check</goal>
 							</goals>
+							<phase>package</phase>
 						</execution>
 					</executions>
 				</plugin>
@@ -739,6 +787,8 @@
 					<configuration>
 						<effort>Max</effort>
 						<threshold>Default</threshold>
+						<!-- http://jira.codehaus.org/browse/MCOBERTURA-203 -->
+						<classFilesDirectory>${project.build.outputDirectory}</classFilesDirectory>
 					</configuration>
 					<executions>
 						<execution>
@@ -770,8 +820,11 @@
 						<historyInputFile>${project.basedir}/pitest-history.xml</historyInputFile>
 						<historyOutputFile>${project.build.directory}/pitest-history.xml</historyOutputFile>
 						<reportsDirectory>${project.build.directory}/site/pit-reports</reportsDirectory>
+						<verbose>${pitest.verbose}</verbose>
 						<jvmArgs>
 							<value>-XX:MaxPermSize=256M</value>
+							<value>-Doutputwriters.logback.jarpath=${outputwriters.logback.jarpath}</value>
+							<value>-Doutputwriters.log4j.jarpath=${outputwriters.log4j.jarpath}</value>
 						</jvmArgs>
 						<threads>4</threads>
 						<targetClasses>
@@ -911,6 +964,13 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
 				<version>2.7</version>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>cobertura</report>
+						</reports>
+					</reportSet>
+				</reportSets>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
