--- a/jmxtrans-output/jmxtrans-output-slf4j/pom.xml
+++ b/jmxtrans-output/jmxtrans-output-slf4j/pom.xml
@@ -14,24 +14,29 @@
 	<description>This module contains output writers that use slf4j.</description>
 
 	<properties>
+    <logback-classic.artifact.name>ch.qos.logback:logback-classic-nosuchdep</logback-classic.artifact.name>
 		<verify.mutationThreshold>29</verify.mutationThreshold>
 		<verify.totalBranchRate>28</verify.totalBranchRate>
 		<verify.totalLineRate>36</verify.totalLineRate>
 	</properties>
 
 	<dependencies>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-annotations</artifactId>
-		</dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+    </dependency>
 		<dependency>
 			<groupId>org.jmxtrans</groupId>
 			<artifactId>jmxtrans-core</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.jmxtrans</groupId>
-			<artifactId>jmxtrans-utils</artifactId>
-		</dependency>
+    <dependency>
+      <groupId>org.jmxtrans</groupId>
+      <artifactId>jmxtrans-logging</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.jmxtrans</groupId>
+      <artifactId>jmxtrans-utils</artifactId>
+    </dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
