--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,8 @@
 		<!-- some versions used by multiple dependencies -->
 		<jackson.version>2.5.1</jackson.version>
 		<jsw.dir>${project.build.directory}/generated-resources/appassembler/jsw/${package.daemon.name}</jsw.dir>
+    <cobertura.logbackVersion>1.1.2</cobertura.logbackVersion>
+    <logback-classic.artifact.name>ch.qos.logback:logback-classic</logback-classic.artifact.name>
 		<main.class>com.googlecode.jmxtrans.JmxTransformer</main.class>
 		<maven.build.timestamp.format>yyMMdd_HHmm</maven.build.timestamp.format>
 		<outputwriters.log4j.jarpath>/ext/slf4j-log4j12-1.7.12.jar.local</outputwriters.log4j.jarpath>
@@ -644,7 +646,6 @@
 					<artifactId>maven-install-plugin</artifactId>
 					<version>2.5.2</version>
 				</plugin>
-
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-jar-plugin</artifactId>
@@ -706,6 +707,9 @@
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.18.1</version>
 					<configuration>
+            <classpathDependencyExcludes>
+              <classpathDependencyExcludes>${logback-classic.artifact.name}</classpathDependencyExcludes>
+            </classpathDependencyExcludes>
 						<forkCount>1</forkCount>
 						<reuseForks>false</reuseForks>
 						<systemPropertyVariables>
@@ -723,6 +727,11 @@
 						</includes>
 					</configuration>
 				</plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-report-plugin</artifactId>
+          <version>2.18.1</version>
+        </plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>animal-sniffer-maven-plugin</artifactId>
@@ -762,6 +771,7 @@
 							<totalBranchRate>${verify.totalBranchRate}</totalBranchRate>
 							<totalLineRate>${verify.totalLineRate}</totalLineRate>
 						</check>
+            <aggregate>true</aggregate>
 					</configuration>
 					<executions>
 						<execution>
@@ -779,6 +789,19 @@
 							<phase>package</phase>
 						</execution>
 					</executions>
+          <dependencies>
+            <dependency>
+              <groupId>org.codehaus.mojo</groupId>
+              <artifactId>cobertura-maven-plugin</artifactId>
+              <version>2.7</version>
+              <exclusions>
+                <exclusion>
+                  <groupId>ch.qos.logback</groupId>
+                  <artifactId>logback-classic</artifactId>
+                </exclusion>
+              </exclusions>
+            </dependency>
+          </dependencies>
 				</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
@@ -958,7 +981,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-report-plugin</artifactId>
-				<version>2.18.1</version>
+        <version>2.18.1</version>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -1090,6 +1113,51 @@
 				</plugins>
 			</build>
 		</profile>
+    <profile>
+      <id>noGitHubSite</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>com.github.github</groupId>
+            <artifactId>site-maven-plugin</artifactId>
+            <configuration>
+              <message>Skipping Github Site pluggin</message>
+              <skip>true</skip>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>noLineCoverageFail</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>cobertura-maven-plugin</artifactId>
+            <configuration>
+              <check>
+                <haltOnFailure>false</haltOnFailure>
+              </check>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>noPITFail</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.pitest</groupId>
+            <artifactId>pitest-maven</artifactId>
+            <configuration>
+              <mutationThreshold>0</mutationThreshold>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
 	</profiles>
 
 </project>
