--- a/jmxtrans-utils-log4j/pom.xml
+++ b/jmxtrans-utils-log4j/pom.xml
@@ -62,7 +62,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.18.1</version>
         <configuration>
-          <forkCount>1</forkCount>
+          <forkCount>${surefire.forkcount}</forkCount>
           <reuseForks>false</reuseForks>
         </configuration>
       </plugin>
