--- a/pom.xml
+++ b/pom.xml
@@ -474,19 +474,12 @@
 							${project.version}</message>
             <merge>true</merge>
 					</configuration>
-          <dependencies>
-            <dependency>
-              <groupId>org.eclipse.mylyn.github</groupId>
-              <artifactId>org.eclipse.egit.github.core</artifactId>
-              <version>2.1.5</version>
-            </dependency>
-          </dependencies>
 					<executions>
             <execution>
               <goals>
                 <goal>site</goal>
               </goals>
-              <phase>site-deploy</phase>
+              <phase>site</phase>
             </execution>
 					</executions>
 				</plugin>
