--- a/jmxtrans-output/jmxtrans-output-ganglia/pom.xml
+++ b/jmxtrans-output/jmxtrans-output-ganglia/pom.xml
@@ -13,6 +13,18 @@
 
 	<description>This module contains Ganglia output writers.</description>
 
+  <scm>
+    <url>${github.repo.url}</url>
+  </scm>
+
+  <distributionManagement>
+    <site>
+      <id>github</id>
+      <name>github</name>
+      <url>scm:git:${github.repo.url}</url>
+    </site>
+  </distributionManagement>
+
 	<properties>
 		<verify.mutationThreshold>45</verify.mutationThreshold>
 		<verify.totalBranchRate>4</verify.totalBranchRate>
