--- a/jmxtrans-utils-log4j/pom.xml
+++ b/jmxtrans-utils-log4j/pom.xml
@@ -13,6 +13,18 @@
 
 	<description>This module contains the logging frameworks loader.</description>
 
+  <scm>
+    <url>${github.repo.url}</url>
+  </scm>
+
+  <distributionManagement>
+    <site>
+      <id>github</id>
+      <name>github</name>
+      <url>scm:git:${github.repo.url}</url>
+    </site>
+  </distributionManagement>
+
 	<properties>
 		<verify.mutationThreshold>43</verify.mutationThreshold>
 		<verify.totalBranchRate>49</verify.totalBranchRate>
