--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
 		<connection>scm:git:git@github.com:jmxtrans/jmxtrans.git</connection>
 		<developerConnection>scm:git:git@github.com:jmxtrans/jmxtrans.git</developerConnection>
 		<tag>HEAD</tag>
-		<url>https://github.com/jmxtrans/jmxtrans</url>
+		<url>${github.repo.url}</url>
 	</scm>
 
 	<distributionManagement>
@@ -84,10 +84,15 @@
 			<id>ossrh</id>
 			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
 		</snapshotRepository>
-    <site>
+    <!--<site>
       <id>local</id>
       <name>local</name>
-      <url>http://localhost/jmxtrans</url>
+      <url>file://${project.build.directory}/jmxtrans-site-dir</url>
+    </site>-->
+    <site>
+      <id>github</id>
+      <name>github</name>
+      <url>scm:git:${github.repo.url}</url>
     </site>
 	</distributionManagement>
 
@@ -100,7 +105,7 @@
 		-->
 		<checkstyle.max.allowed.violations>0</checkstyle.max.allowed.violations>
     <cobertura.logbackVersion>1.1.2</cobertura.logbackVersion>
-		<github.global.server>github</github.global.server>
+    <github.repo.url>https://github.com/jmxtrans/jmxtrans.git</github.repo.url>
 		<!-- some versions used by multiple dependencies -->
 		<jackson.version>2.5.1</jackson.version>
 		<jsw.dir>${project.build.directory}/generated-resources/appassembler/jsw/${package.daemon.name}</jsw.dir>
@@ -366,16 +371,16 @@
 				<version>4.3.6</version>
 				<scope>runtime</scope>
 			</dependency>
-			<dependency>
 				<!--
+			<dependency>
 					There is no compile time dependency on jgit. There might be a runtime dependency that I did not
 					identify yet, so let's keep it for the moment. After further analysis, we might be able to remove it.
-				-->
+
 				<groupId>org.eclipse.jgit</groupId>
 				<artifactId>org.eclipse.jgit</artifactId>
 				<version>3.7.0.201502260915-r</version>
 				<scope>runtime</scope>
-			</dependency>
+			</dependency>-->
 			<dependency>
 				<!--
 					There is no compile time dependency on jboss remoting. There might be a runtime dependency that I did not
@@ -462,27 +467,6 @@
 	<build>
 		<pluginManagement>
 			<plugins>
-				<plugin>
-					<groupId>com.github.github</groupId>
-					<artifactId>site-maven-plugin</artifactId>
-					<!--
-						version 0.11 seem to have some problem to publish, let's wait until 0.12 to upgrade
-					-->
-					<version>0.10</version>
-					<configuration>
-						<message>Creating site for ${project.name}
-							${project.version}</message>
-            <merge>true</merge>
-					</configuration>
-					<executions>
-            <execution>
-              <goals>
-                <goal>site</goal>
-              </goals>
-              <phase>site</phase>
-            </execution>
-					</executions>
-				</plugin>
 				<plugin>
 					<groupId>com.google.code.sortpom</groupId>
 					<artifactId>maven-sortpom-plugin</artifactId>
@@ -686,6 +670,25 @@
 					<artifactId>maven-resources-plugin</artifactId>
 					<version>2.7</version>
 				</plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-scm-publish-plugin</artifactId>
+          <version>1.1</version>
+          <configuration>
+            <scmBranch>gh-pages</scmBranch>
+            <tryUpdate>false</tryUpdate>
+            <serverId>github</serverId>
+          </configuration>
+          <executions>
+            <execution>
+              <id>scm-publish</id>
+              <phase>site-deploy</phase>
+              <goals>
+                <goal>publish-scm</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-shade-plugin</artifactId>
@@ -695,6 +698,9 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-site-plugin</artifactId>
 					<version>3.4</version>
+          <configuration>
+            <skipDeploy>true</skipDeploy>
+          </configuration>
           <executions>
             <execution>
               <goals>
@@ -891,10 +897,6 @@
 
 		<plugins>
 			<plugin>
-				<groupId>com.github.github</groupId>
-				<artifactId>site-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
 				<groupId>com.google.code.sortpom</groupId>
 				<artifactId>maven-sortpom-plugin</artifactId>
 			</plugin>
@@ -917,6 +919,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-scm-publish-plugin</artifactId>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -1001,6 +1007,16 @@
 					</reportSet>
 				</reportSets>
 			</plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-scm-publish-plugin</artifactId>
+        <version>1.1</version>
+        <configuration>
+          <scmBranch>gh-pages</scmBranch>
+          <tryUpdate>false</tryUpdate>
+          <serverId>github</serverId>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
@@ -1141,21 +1157,6 @@
 				</plugins>
 			</build>
 		</profile>
-    <profile>
-      <id>noGitHubSite</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>com.github.github</groupId>
-            <artifactId>site-maven-plugin</artifactId>
-            <configuration>
-              <message>Skipping Github Site pluggin</message>
-              <skip>true</skip>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
     <profile>
       <id>noLineCoverageFail</id>
       <build>
