--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
 		<connection>scm:git:git@github.com:jmxtrans/jmxtrans.git</connection>
 		<developerConnection>scm:git:git@github.com:jmxtrans/jmxtrans.git</developerConnection>
 		<tag>HEAD</tag>
-		<url>${github.repo.url}</url>
+		<url>https://github.com/jmxtrans/jmxtrans</url>
 	</scm>
 
 	<distributionManagement>
@@ -91,8 +91,7 @@
     </site>-->
     <site>
       <id>github</id>
-      <name>github</name>
-      <url>scm:git:${github.repo.url}</url>
+      <url>https://github.com/jmxtrans/jmxtrans</url>
     </site>
 	</distributionManagement>
 
@@ -676,12 +675,13 @@
           <version>1.1</version>
           <configuration>
             <scmBranch>gh-pages</scmBranch>
-            <tryUpdate>false</tryUpdate>
+            <tryUpdate>true</tryUpdate>
             <serverId>github</serverId>
+            <pubScmUrl>${github.repo.url}</pubScmUrl>
           </configuration>
           <executions>
             <execution>
-              <id>scm-publish</id>
+              <id>stage-deploy</id>
               <goals>
                 <goal>publish-scm</goal>
               </goals>
@@ -703,11 +703,18 @@
           </configuration>
           <executions>
             <execution>
+              <id>site-build</id>
               <goals>
                 <goal>site</goal>
-                <goal>stage</goal>
               </goals>
               <phase>site</phase>
+            </execution>
+            <execution>
+              <id>site-stage</id>
+              <goals>
+                <goal>stage</goal>
+              </goals>
+              <phase>post-site</phase>
             </execution>
           </executions>
 				</plugin>
@@ -754,7 +761,7 @@
           <artifactId>maven-surefire-report-plugin</artifactId>
           <version>2.18.1</version>
           <configuration>
-            <aggregate>false</aggregate>
+            <aggregate>true</aggregate>
           </configuration>
         </plugin>
 				<plugin>
@@ -796,7 +803,7 @@
 							<totalBranchRate>${verify.totalBranchRate}</totalBranchRate>
 							<totalLineRate>${verify.totalLineRate}</totalLineRate>
 						</check>
-            <aggregate>false</aggregate>
+            <aggregate>true</aggregate>
 					</configuration>
           <dependencies>
             <dependency>
@@ -919,10 +926,20 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-scm-publish-plugin</artifactId>
+        <version>1.1</version>
+        <configuration>
+          <scmBranch>gh-pages</scmBranch>
+          <tryUpdate>true</tryUpdate>
+          <serverId>github</serverId>
+          <pubScmUrl>${github.repo.url}</pubScmUrl>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
+        <configuration>
+          <skipDeploy>true</skipDeploy>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -1007,16 +1024,6 @@
 					</reportSet>
 				</reportSets>
 			</plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-scm-publish-plugin</artifactId>
-        <version>1.1</version>
-        <configuration>
-          <scmBranch>gh-pages</scmBranch>
-          <tryUpdate>false</tryUpdate>
-          <serverId>github</serverId>
-        </configuration>
-      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
