--- a/pom.xml
+++ b/pom.xml
@@ -687,6 +687,7 @@
               <groupId>org.apache.maven.scm</groupId>
               <artifactId>maven-scm-provider-gitexe</artifactId>
               <version>[1.9.4]</version>
+              <!-- required in order to hide password value in command logging on travis -->
             </dependency>
           </dependencies>
           <executions>
@@ -799,6 +800,7 @@
 					<artifactId>cobertura-maven-plugin</artifactId>
 					<version>2.7</version>
 					<configuration>
+            <aggregate>true</aggregate>
 						<check>
 							<branchRate>0</branchRate>
 							<lineRate>0</lineRate>
@@ -807,21 +809,8 @@
 							<totalBranchRate>${verify.totalBranchRate}</totalBranchRate>
 							<totalLineRate>${verify.totalLineRate}</totalLineRate>
 						</check>
-            <aggregate>true</aggregate>
+            <quiet>true</quiet>
 					</configuration>
-          <dependencies>
-            <dependency>
-              <groupId>org.codehaus.mojo</groupId>
-              <artifactId>cobertura-maven-plugin</artifactId>
-              <version>2.7</version>
-              <exclusions>
-                <exclusion>
-                  <groupId>ch.qos.logback</groupId>
-                  <artifactId>logback-classic</artifactId>
-                </exclusion>
-              </exclusions>
-            </dependency>
-          </dependencies>
 					<executions>
 						<execution>
 							<id>clean</id>
@@ -946,6 +935,7 @@
             <groupId>org.apache.maven.scm</groupId>
             <artifactId>maven-scm-provider-gitexe</artifactId>
             <version>[1.9.4]</version>
+            <!-- required in order to hide password value in command logging on travis -->
           </dependency>
         </dependencies>
       </plugin>
@@ -1056,6 +1046,7 @@
 				<reportSets>
 					<reportSet>
 						<reports>
+              <!-- dont do integration test. Added as of 2.7? -->
 							<report>cobertura</report>
 						</reports>
 					</reportSet>
@@ -1181,6 +1172,9 @@
 		</profile>
     <profile>
       <id>noLineCoverageFail</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
       <build>
         <plugins>
           <plugin>
@@ -1197,6 +1191,9 @@
     </profile>
     <profile>
       <id>noPITFail</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
       <build>
         <plugins>
           <plugin>
